Add prototype contents

--- a/prototype/css/index.css
+++ b/prototype/css/index.css
@@ -1,9 +1,9 @@
-* {
-  margin: 0rem;
-  padding: 0rem;
-  border-width: 0rem;
-  color: #565656;
-}
+/* * { */
+  /* margin: 0rem; */
+  /* padding: 0rem; */
+  /* border-width: 0rem; */
+  /* color: #565656; */
+/* } */
 
 *:focus {
   outline: none;
