--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,7 +7,7 @@ html,
 body {
   width: 100%;
   height: 100%;
-  margin: 0rem;
+  margin: 0;
   font-size: 62.5%;
   font-family: 'Open Sans', sans-serif;
 }
@@ -31,7 +31,9 @@ body {
 }
 
 .header {
-  flex: 0;
+  top: 0;
+  width: 100%;
+  height: 32px;
 
   background-color: #00ff00;
 }
@@ -39,23 +41,24 @@ body {
 
 /* Tool bar */
 .toolBar {
-  flex-grow: 1;
   display: flex;
+  width: 100%;
+  height: 31px;
   border-style: solid;
-  border-width: 0rem 0rem 0.1rem 0rem;
+  border-width: 0 0 1px 0;
   border-color: transparent transparent #aaaaaa transparent;
   background-color: #f7f7f7;
 }
 
 .toolButton {
-  width: 5rem;
-  height: 2.1rem;
-  margin: 0.5rem;
+  width: 64px;
+  height: 21px;
+  margin: 5px;
 }
 
 .toolRadio {
-  height: 2.1rem;
-  margin: 0.5rem;
+  height: 21px;
+  margin: 5px;
   vertical-align: middle;
 }
 
@@ -67,6 +70,11 @@ body {
 /* Contents */
 .contents {
   flex: 1;
+  position: fixed;
+  top: 32px;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
 
   background-color: #ff0000;
 }
@@ -74,20 +82,18 @@ body {
 .fileNameBox {
   z-index: 1;
   position: absolute;
-  top: 3rem;
-  right: 1rem;
+  top: 2px;
+  right: 2px;
   border-style: solid;
-  border-width: 0.1rem;
-  border-radius: 0.2rem;
+  border-width: 1px;
+  border-radius: 2px;
   border-color: #cccccc;
   background-color: #ffffff;
-  box-shadow: 0.2rem 0.2rem 0.2rem 0rem rgba(0, 0, 0, 0.5);
-
-  /* visibility: hidden; */
+  box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.5);
 }
 
 .fileName {
-  margin: 0rem 0.4rem 0rem 0.4rem;
+  margin: 0 4px 0 4px;
 }
 
 .imageView {
